--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=BulkyMVC;User=root;password=root123;port=3306;"
+  }
 }
