some required changes

--- a/BulkyWeb/Properties/launchSettings.json
+++ b/BulkyWeb/Properties/launchSettings.json
@@ -16,7 +16,8 @@
       "applicationUrl": "http://localhost:5027",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "browser": "chrome"
     },
     "https": {
       "commandName": "Project",
@@ -25,7 +26,8 @@
       "applicationUrl": "https://localhost:7258;http://localhost:5027",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "browser": "chrome"
     },
     "IIS Express": {
       "commandName": "IISExpress",
